--- a/Cắt menu/index.html
+++ b/Cắt menu/index.html
@@ -8,7 +8,7 @@
     <p>visit: <a href="https://www.google.com">myBlog</a></p>
     <!-- Header Section -->
     <header>
-        <div class="head1">Responsive Menu</div>
+        <div class="head">Responsive Menu</div>
 
     </header>
     <!-- Menu Navigation Bar -->
