--- a/grid-system-col-16/index.html
+++ b/grid-system-col-16/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>16-column-grid</title>
+    <title>Grid-system-col-16</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
